# cyberimmune-systems-example-traffic-light-kos

./: .gitignore  CMakeLists.txt  CMakeListsexample.txt  Makefile  README.html  cross-build.sh  expected_output  init.sh  script.sh
central-server/: LICENSE  Makefile  README.md  central-server.py  requests.rest
client/: CMakeLists.txt
client/src/: client.c
client2/: CMakeLists.txt
client2/src/: client.c
communication_system/: CMakeList.txt  CMakeLists.txt
communication_system/src/: communication_system.c  response-parser.c
connection/: CMakeLists.txt
connection/src/: connection.c
connector/: CMakeLists.txt
connector/src/: connector.c
control_system/: CMakeLists.txt
control_system/src/: control_system.c
diagnostic_system/: CMakeLists.txt
diagnostic_system/src/: diagnostic_system.c  diagnostic_system22.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
einitexample/: CMakeLists.txt
json-parser/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile.in  README.md  configure  configure.ac  json-parser.pc.in  json.c
json-parser/bindings/python/: jsonparser.pyx  setup.py  wrap_json.c
json-parser/bindings/python/example/: test.py
json-parser/examples/: test_json.c
json-parser/tests/: ext-invalid-0001.json  invalid-0003.json  invalid-0009.json  test.c  test.py  valid-0001.json  valid-0002.json  valid-0003.json  valid-0004.json  valid-0005.json  valid-0006.json  valid-0007.json  valid-0008.json  valid-0012.json  valid-0013.json
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c  lights_gpio2.c
resources/: CPing.cdl  Client.edl  Connection.edl  ControlSystem.edl  CummunicationSystem.edl  DiagnosticSystem.edl  IPing.idl  LightsGPIO.edl  Ping.cdl  Ping.idl
resources/edl/: Client2.edl  Connector.edl  Ping.cdl
resources/hdd/etc/: dhcpcd.conf  dhcpcd_dynamic.conf  hosts
resourcesexample/edl/: Client2.edl  Ping.idl  Server.edl
resourcesexample/hdd/etc/: dhcpcd_static.conf
rest-client/: Makefile
rest-client/include/: response-parser.h
rest-client/src/: response-parser.c  rest-client.c
server/: CMakeLists.txt
server/src/: server.c
